User Image Grade Resume Chat CRUD 단위테스트 완료